--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,16 +5,26 @@ permalink: "/contact/"
 comments: false
 ---
 
-<form action="https://formspree.io/{{site.email}}" method="POST">    
-<p class="mb-4">Thank you for your interest in getting in touch with us. Please send your message here. We will reply as soon as possible!</p>
-<div class="form-group row">
-<div class="col-md-6">
-<input class="form-control" type="text" name="name" placeholder="Name*" required>
-</div>
-<div class="col-md-6">
-<input class="form-control" type="email" name="_replyto" placeholder="E-mail Address*" required>
-</div>
-</div>
-<textarea rows="8" class="form-control mb-3" name="message" placeholder="Message*" required></textarea>    
-<input class="btn btn-dark" type="submit" value="Send">
+<p class="mb-4">
+    <img class="mb-4" src="/assets/images/us.jpg" alt="nosotros">
+    Gracias por ponerte en contacto con nosotros! Te contestaremos en cuanto sea posible! Gracias!
+</p>
+
+<!-- Revisar https://formspree.io/forms/xqazjnyp/overview -->
+<form
+    action="https://formspree.io/f/xqazjnyp"
+    method="POST"
+>    
+    <div class="form-group row">
+        <div class="col-md-6">
+            <input class="form-control" type="text" name="name" placeholder="Nombre*" required>
+        </div>
+        <div class="col-md-6">
+            <input class="form-control" type="email" name="_replyto" placeholder="Correo electrónico*" required>
+        </div>
+    </div>
+    <textarea rows="8" class="form-control mb-3" name="message" placeholder="Mensaje*" required></textarea>
+
+    <input class="btn btn-lg btn-success col-md-12" type="submit" value="Enviar">
+    
 </form>
