Creado layout para about, añadidas imagenes de nosotros

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,8 +6,7 @@ comments: false
 ---
 
 <p class="mb-4">
-    <img class="mb-4" src="/assets/images/us.jpg" alt="nosotros">
-    Gracias por ponerte en contacto con nosotros! Te contestaremos en cuanto sea posible! Gracias!
+    Gracias por ponerte en contacto con nosotros! Te contestaremos en cuanto podamos!
 </p>
 
 <!-- Revisar https://formspree.io/forms/xqazjnyp/overview -->
