Avances en about

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@ comments: false
     Gracias por ponerte en contacto con nosotros! Te contestaremos en cuanto podamos!
 </p>
 
-<!-- Revisar https://formspree.io/forms/xqazjnyp/overview -->
+<!-- Revisar en https://formspree.io/forms/xqazjnyp/overview -->
 <form
     action="https://formspree.io/f/xqazjnyp"
     method="POST"
