--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ background: '/img/bg-index.jpg'
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Aprendiendo a ser guardianes de la Tierra</h1>
-      <p class="lead mb-4">Permacultura, meditación, ecoaldeas, espiritualidad, ecología profunda, psicodélicos... Documentamos nuestro viaje en busca de formas de vivir más conscientes y alineadas con nuestra esencia.</p>
+      <p class="lead mb-4">
+        Permacultura, meditación, ecoaldeas, espiritualidad, agroforestería sintrópica, psicodélicos... Documentamos lo que nos mueve y más nos apasiona de los lugares que visitamos en busca de formas de vivir más conscientes y alineadas con nuestra esencia.
+      </p>
       <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Sobre nosotros</a>
     </div>
     <!-- Este div estará visible en pantallas medianas (md) o más grandes -->
