Ajustes visuales para version movil

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@ background: '/img/bg-index.jpg'
       <p class="lead mb-4">
         Permacultura, meditación, ecoaldeas, espiritualidad, agroforestería sintrópica, psicodélicos... Documentamos lo que nos mueve y más nos apasiona de los lugares que visitamos en busca de formas de vivir más conscientes y alineadas con nuestra esencia.
       </p>
-      <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg">Sobre nosotros</a>
+      <div class="col-sm-12">
+        <a href="{{site.baseurl}}/about" class="btn btn-block btn-dark text-white px-5 btn-lg">
+          <i class="fa-solid fa-people-robbery fa-fw"></i>
+          Sobre nosotros
+        </a>
+      </div>
     </div>
     <!-- Este div estará visible en pantallas medianas (md) o más grandes -->
     <div class="col-md-6 text-right pl-0 pl-lg-4 d-none d-md-block">
