--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ background: '/img/bg-index.jpg'
 
 <!-- Home Intro -->
 {% if page.url == "/" %} 
-<div class="rounded mb-5 hero">
+<div class="rounded hero">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Aprendiendo a ser guardianes de la Tierra</h1>
@@ -15,7 +15,7 @@ background: '/img/bg-index.jpg'
       </p>
       <div class="col-sm-12">
         <a href="{{site.baseurl}}/about" class="btn btn-block btn-dark text-white px-5 btn-lg">
-          <i class="fa-solid fa-people-robbery fa-fw"></i>
+          <i class="fa-solid fa-seedling fa-fw"></i>
           Sobre nosotros
         </a>
       </div>
