--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
-title: Marta y Andreu
+title: Permaprendices | Marta y Andreu
 layout: default
 background: '/img/bg-index.jpg'
 ---
 
 <!-- Home Intro -->
 {% if page.url == "/" %} 
-<div class="rounded hero">
+<div class="rounded mb-5 hero">
   <div class="row align-items-center justify-content-between">
     <div class="col-md-6">
       <h1 class="font-weight-bold mb-4 serif-font">Aprendiendo a ser guardianes de la Tierra</h1>
