--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@ background: '/img/bg-index.jpg'
 <section class="row">
   {% for post in site.posts %}
       {% if post.featured == true %}
+        {% unless post.draft %}
           <div class="col-md-4 mb-4">
             {% include postbox.html %}
           </div>
+        {% endunless %}
       {% endif %}
   {% endfor %}
 </section>
@@ -48,11 +50,13 @@ background: '/img/bg-index.jpg'
   <div class="col-md-8">
     <div class="row">
       {% for post in paginator.posts %}
-      {% unless post.featured == true %}
-      <div class="col-md-6 mb-5">
-        {% include postbox.html %}
-      </div>
-      {% endunless %}
+        {% unless post.featured == true %}
+          {% unless post.draft %}
+            <div class="col-md-6 mb-5">
+              {% include postbox.html %}
+            </div>
+          {% endunless %}
+        {% endunless %}
       {% endfor %}
     </div>
     <!-- Pagination -->
@@ -63,7 +67,9 @@ background: '/img/bg-index.jpg'
     </div>
   </div>
   <div class="col-md-4">
-      {% include sidebar.html %}
+      {% comment %}
+        {% include sidebar.html %}
+      {% endcomment %}
     </div>
   </section>
   
