- Botones Marta en pagos

--- a/pages/landing_pagos.html
+++ b/pages/landing_pagos.html
@@ -112,31 +112,33 @@ permalink: "/pay/"
         <div class="button-group">
             <!-- Botón PayPal -->
             <a href="https://paypal.me/anduwet" target="_blank" rel="noopener noreferrer" class="payment-button paypal">
-                Pagar con PayPal
+                PayPal (A)
             </a>
 
             <!-- Botón Revolut -->
             <a href="https://revolut.me/permaprendices" target="_blank" rel="noopener noreferrer" class="payment-button revolut">
-                Pagar con Revolut
+                Revolut (A)
             </a>
 
             <!-- Botón Wise -->
             <a href="https://wise.com/pay/me/andreug22" target="_blank" rel="noopener noreferrer" class="payment-button wise">
-                Pagar con Wise
+                Wise (A)
             </a>
 
-            <!-- ***** Para añadir más botones en el futuro ***** -->
-            <!-- Simplemente copia una de las líneas <a>...</a> de arriba, -->
-            <!-- cambia el href="URL_NUEVA", el texto del botón, -->
-            <!-- y si quieres, añade una nueva clase CSS (ej. "patreon") -->
-            <!-- y define su color en la sección <style> de arriba. -->
-            <!-- Ejemplo:
-            <a href="URL_NUEVA" target="_blank" rel="noopener noreferrer" class="payment-button nombre-nuevo">
-                Pagar con [Nuevo Método]
+            <!-- Botón PayPal -->
+            <a href="https://www.paypal.me/mtornero" target="_blank" rel="noopener noreferrer" class="payment-button paypal">
+                PayPal (M)
             </a>
-            Y en el CSS:
-            .nombre-nuevo { background-color: #color-deseado; }
-            -->
+
+            <!-- Botón Revolut -->
+            <a href="https://revolut.me/martatoru" target="_blank" rel="noopener noreferrer" class="payment-button revolut">
+                Revolut (M)
+            </a>
+
+            <!-- Botón Wise -->
+            <a href="https://wise.com/pay/me/martat676" target="_blank" rel="noopener noreferrer" class="payment-button wise">
+                Wise (M)
+            </a>
 
         </div>
 
