--- a/pages/paypal_redirection.html
+++ b/pages/paypal_redirection.html
@@ -11,7 +11,7 @@ permalink: "/autopay/"
 </head>
 <body>
 
-<p>Redirigiendo a PayPal con un monto aleatorio...</p>
+<p>Redirigiendo a PayPal...</p>
 <!-- Añadimos un ID al enlace para poder seleccionarlo fácilmente con JavaScript -->
 <p>Si no eres redirigido automáticamente, por favor <a id="fallback-link" href="#">haz clic aquí</a>.</p>
 
